--- a/app/views/solutions/index.html.haml
+++ b/app/views/solutions/index.html.haml
@@ -24,7 +24,9 @@
     - if @supervision.state == "solution_feedback"
 
       %p= t(".solution_feedback.description", :default => "Provide the feedback on solutions")
-      = render :layout => "supervisions/contentable_form", :locals => {:contentable => @solutions_feedback} do |f|
+      = semantic_form_for([@supervision, @solutions_feedback]) do |f|
+        = f.inputs do
+          = f.input :content
         = f.buttons do
           = f.commit_button t(".solutions_feedback.submit", :default => "Submit")
 
@@ -35,7 +37,9 @@
     - elsif @supervision.state == "solution"
       %p= t(".step_description", :default => "Any solutions?")
 
-      = render :layout => "supervisions/contentable_form", :locals => {:contentable => @solution} do |f|
+      = semantic_form_for([@supervision, @solution]) do |f|
+        = f.inputs do
+          = f.input :content
         = f.buttons do
           = f.commit_button t(".solution.submit", :default => "Submit")
           = link_to(t(".solution.no_more", :default => "I have no more solutions"), supervision_votes_path(:supervision_id => @supervision.id), :method => :post)
