--- a/app/views/ideas/index.html.haml
+++ b/app/views/ideas/index.html.haml
@@ -7,6 +7,7 @@
   %p.head= t(".topic", :default => "Current topic")
   = render "topics/topic", :topic => @supervision.topic
 
+  %p.head= t(".questions", :default => "Questions")
   = render "topic_questions/questions"
 
   = render "ideas"
