--- a/app/views/groups/_group_brief.html.haml
+++ b/app/views/groups/_group_brief.html.haml
@@ -7,4 +7,4 @@
       %li= link_to t(".links.edit", :default => "Edit"), edit_group_path(group.id)
       %li= change_group_membership_link(current_user, group)
       %li= link_to t(".links.chat", :default => "Chat"), chat_room_path(group.chat_room)
-      %li= link_to t(".links.session", :default => "Session"), new_supervision_path(:group_id => group.id)
+      %li= link_to t(".links.session", :default => "Session"), new_group_supervision_path(group)
