--- a/app/views/supervisions/show.html.haml
+++ b/app/views/supervisions/show.html.haml
@@ -1,41 +1,62 @@
 - @title = t(".title", :default => "Supervision")
 
-%article
+%article[@supervision]{:data => {:"supervision-state" => @supervision.state}}
   %header
     %h1= t(".heading", :default => "Supervision feedback")
 
-  %p
-    = t(".supervision_finished", :default => "This supervision is finished.")
-    - if @supervision.group.current_supervision.present?
-      = link_to(t(".go_to_current", :default => "Go to current supervision session"), supervision_step_path(@supervision.group.current_supervision))
-    - else
-      = link_to(t(".create_new", :default => "Create new?"), new_gropup_supervision_path(@supervision.group))
+  - if @supervision.finished?
+    %p
+      = t(".supervision_finished", :default => "This supervision is finished.")
+      - if @supervision.group.current_supervision.present?
+        = link_to(t(".go_to_current", :default => "Go to current supervision session"), supervision_step_path(@supervision.group.current_supervision))
+      - else
+        = link_to(t(".create_new", :default => "Create new?"), new_group_supervision_path(@supervision.group))
 
-  %p.head= t(".topic", :default => "Topic")
-  = render "topics/topic", :topic => @supervision.topic
+  - if step_finished?(@supervision, :topic_vote)
+    .topics
+      %h2= t(".topic", :default => "Topic")
+      = render @supervision.topic
 
-  %p.head= t(".questions", :default => "Questions")
-  = render "topic_questions/questions"
+  - if @supervision.topic_question?
+  - elsif step_finished?(@supervision, :topic_question)
+    .questions
+      %h2= t(".questions", :default => "Questions")
+      = render @supervision.topic_questions
 
-  %p.head= t(".ideas", :default => "Ideas")
-  = render "ideas/ideas"
+  - if @supervision.idea?
+  - elsif step_finished?(@supervision, :idea)
+    .ideas
+      %h2= t(".ideas", :default => "Ideas")
+      = render @supervision.ideas
 
-  %p.head= t(".ideas_feedback.heading", :default => "Feedback on ideas:")
-  = render(:partial => "supervisions/contentable", :object => @supervision.ideas_feedback)
+  - if @supervision.idea_feedback?
+  - elsif step_finished?(@supervision, :idea_feedback)
+    .ideas_feedbacks
+      %h2= t(".ideas_feedback", :default => "Feedback on ideas")
+      = render @supervision.ideas_feedback
 
-  %p.head= t(".solutions", :default => "Solutions")
-  = render "solutions/solutions"
+  - if @supervision.solution?
+  - elsif step_finished?(@supervision, :solution)
+    .solutions
+      %h2= t(".solutions", :default => "Solutions")
+      = render @supervision.solutions
 
-  %p.head= t(".solutions_feedback.heading", :default => "Feedback on solutions:")
-  = render(:partial => "supervisions/contentable", :object => @supervision.solutions_feedback)
+  - if @supervision.solution_feedback?
+  - elsif step_finished?(@supervision, :solution_feedback)
+    .solutions_feedbacks
+      %h2= t(".solutions_feedback", :default => "Feedback on solutions")
+      = render @supervision.solutions_feedback
 
-  %p.head= t(".supervision_feedback.heading", :default => "General feedback on supervision:")
-  - @supervision.supervision_feedbacks.each do |supervision_feedback|
-    = render(:partial => "supervisions/contentable", :object => supervision_feedback)
+  - if @supervision.supervision_feedback?
+  - elsif step_finished?(@supervision, :supervision_feedback)
+    .supervision_feedbacks
+      %h2= t(".supervision_feedback", :default => "General feedback on supervision")
+      = render @supervision.supervision_feedbacks
 
   %footer
-    = t(".supervision_finished", :default => "This supervision is finished.")
-    - if @supervision.group.current_supervision.present?
-      = link_to(t(".go_to_current", :default => "Go to current supervision session"), supervision_step_path(@supervision.group.current_supervision))
-    - else
-      = link_to(t(".create_new", :default => "Create new?"), new_group_supervision_path(@supervision.group))
+    - if @supervision.finished?
+      = t(".supervision_finished", :default => "This supervision is finished.")
+      - if @supervision.group.current_supervision.present?
+        = link_to(t(".go_to_current", :default => "Go to current supervision session"), supervision_step_path(@supervision.group.current_supervision))
+      - else
+        = link_to(t(".create_new", :default => "Create new?"), new_group_supervision_path(@supervision.group))
