--- a/app/views/supervisions/show.html.haml
+++ b/app/views/supervisions/show.html.haml
@@ -4,13 +4,14 @@
   %header
     %h1= t(".heading", :default => "Supervision feedback")
 
-  - if @supervision.finished?
-    %p
-      = t(".supervision_finished", :default => "This supervision is finished.")
-      - if @supervision.group.current_supervision.present?
-        = link_to(t(".go_to_current", :default => "Go to current supervision session"), supervision_step_path(@supervision.group.current_supervision))
-      - else
-        = link_to(t(".create_new", :default => "Create new?"), new_group_supervision_path(@supervision.group))
+    - if @supervision.finished?
+      = render :partial => 'supervision_finished'
+
+  - if @supervision.topic?
+    = render :partial => 'supervision_topic'
+
+  - if @supervision.topic_vote?
+    = render :partial => 'supervision_topic_vote'
 
   - if step_finished?(@supervision, :topic_vote)
     .topics
@@ -18,36 +19,42 @@
       = render @supervision.topic
 
   - if @supervision.topic_question?
+    = render :partial => 'supervision_topic_question'
   - elsif step_finished?(@supervision, :topic_question)
     .questions
       %h2= t(".questions", :default => "Questions")
       = render @supervision.topic_questions
 
   - if @supervision.idea?
+    = render :partial => 'supervision_idea'
   - elsif step_finished?(@supervision, :idea)
     .ideas
       %h2= t(".ideas", :default => "Ideas")
       = render @supervision.ideas
 
   - if @supervision.idea_feedback?
+    = render :partial => 'supervision_idea_feedback'
   - elsif step_finished?(@supervision, :idea_feedback)
     .ideas_feedbacks
       %h2= t(".ideas_feedback", :default => "Feedback on ideas")
       = render @supervision.ideas_feedback
 
   - if @supervision.solution?
+    = render :partial => 'supervision_solution'
   - elsif step_finished?(@supervision, :solution)
     .solutions
       %h2= t(".solutions", :default => "Solutions")
       = render @supervision.solutions
 
   - if @supervision.solution_feedback?
+    = render :partial => 'supervision_solution_feedback'
   - elsif step_finished?(@supervision, :solution_feedback)
     .solutions_feedbacks
       %h2= t(".solutions_feedback", :default => "Feedback on solutions")
       = render @supervision.solutions_feedback
 
   - if @supervision.supervision_feedback?
+    = render :partial => 'supervision_supervision_feedback'
   - elsif step_finished?(@supervision, :supervision_feedback)
     .supervision_feedbacks
       %h2= t(".supervision_feedback", :default => "General feedback on supervision")
@@ -55,8 +62,9 @@
 
   %footer
     - if @supervision.finished?
-      = t(".supervision_finished", :default => "This supervision is finished.")
-      - if @supervision.group.current_supervision.present?
-        = link_to(t(".go_to_current", :default => "Go to current supervision session"), supervision_step_path(@supervision.group.current_supervision))
-      - else
-        = link_to(t(".create_new", :default => "Create new?"), new_group_supervision_path(@supervision.group))
+      %p
+        = t(".supervision_finished", :default => "This supervision is finished.")
+        - if @supervision.group.current_supervision.present?
+          = link_to(t(".go_to_current", :default => "Go to current supervision session"), supervision_step_path(@supervision.group.current_supervision))
+        - else
+          = link_to(t(".create_new", :default => "Create new?"), new_group_supervision_path(@supervision.group))
