Style supervision page a little

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -27,8 +27,7 @@ a
 
 section > header
   +container
-  +prepend-top
-  +border-radius($border-radius)
+  +border-bottom-radius($border-radius)
   +box-shadow
   +clearfix
   background-color: $blueprint-background-color
