--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,4 +1,5 @@
 %div[answer]
-  %p.head= t(".answer", :default => "Answer")
+  .head
+    %p= t(".answer", :default => "Answer")
   %p= answer.content
 
