--- a/app/views/ideas_feedbacks/_ideas_feedback.html.haml
+++ b/app/views/ideas_feedbacks/_ideas_feedback.html.haml
@@ -1,3 +1,4 @@
 %div[ideas_feedback]
   = render ideas_feedback.user
-  %p.content= ideas_feedback.content
+  .content
+    %p= ideas_feedback.content
