--- a/app/views/solutions_feedbacks/_solutions_feedback.html.haml
+++ b/app/views/solutions_feedbacks/_solutions_feedback.html.haml
@@ -1,3 +1,4 @@
 %div[solutions_feedback]
   = render solutions_feedback.user
-  %p.content= solutions_feedback.content
+  .content
+    %p= solutions_feedback.content
