--- a/app/views/supervision_feedbacks/_supervision_feedback.html.haml
+++ b/app/views/supervision_feedbacks/_supervision_feedback.html.haml
@@ -1,3 +1,4 @@
 %div[supervision_feedback]
   = render supervision_feedback.user
-  %p.content= supervision_feedback.content
+  .content
+    %p= supervision_feedback.content
