--- a/app/views/supervisions/_supervision_idea.html.haml
+++ b/app/views/supervisions/_supervision_idea.html.haml
@@ -5,11 +5,15 @@
       - @supervision.ideas.each do |idea|
         %div[idea]
           = render idea.user
-          %p.content= idea.content
-          = semantic_form_for([@supervision, idea]) do |f|
-            = f.inputs t(".idea_rating", :default => "Idea rating") do
-              = f.input :rating, :as => :radio, :collection => 1..5, :disabled => idea.rating
-            = f.buttons :commit unless idea.rating
+          .content
+            %p= idea.content
+            .rating
+              .head
+                %p= t(".idea_rating", :default => "Idea rating")
+              = form_for([@supervision, idea]) do |f|
+                - 1.upto(5) do |i|
+                  = f.radio_button :rating, i, { :disabled => idea.rating.present?, :class => "star" }
+                = f.submit t(".submit_rate", :default => "Rate") unless idea.rating
     - else
       %p= t(".waiting_for_ideas", :default => "Waiting for ideas")
 
