--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,3 +1,3 @@
-.user
+.user{ :class => ("you" if user == current_user) }
   = raw gravatar_for(user)
-  %p= user
+  %p= link_to user, user, :title => user
