--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,3 +1,3 @@
 .user{ :class => ("you" if user == current_user) }
-  = raw gravatar_for(user)
+  = link_to gravatar_for(user).html_safe, user
   %p= link_to user, user, :title => user
