--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,5 +30,6 @@
       = render 'layouts/footer'
 
     -# Javascripts at end of body, to not slow down dowloading content
+    = javascript_include_tag "http://localhost:8080/socket.io/socket.io.js"
     = javascript_include_tag :defaults
 
