Javascript cleanups and chat updates

--- a/app/stylesheets/partials/_page.sass
+++ b/app/stylesheets/partials/_page.sass
@@ -250,7 +250,7 @@ div.user_info
     .chat_message
       .user
         font-weight: bold
-      .timestamp
+      time
         color: #888
       &:nth-child(even)
         background-color: #eee
