--- a/app/views/chat_rooms/show.html.haml
+++ b/app/views/chat_rooms/show.html.haml
@@ -1,12 +1,12 @@
 - @title = t ".title", :group_name => @chat_room.group.name, :default => "%{group_name} Group Chat"
 
 %article
-  .div[@chat_room]
+  %div[@chat_room]{ :data => { :token => @token } }
     %ul.messages
       - @chat_messages.reverse_each do |chat_message|
         %li[chat_message]
           %span.user= chat_message.user
-          %span.timestamp= l(chat_message.created_at, :format => :short)
+          %time{ :datetime => chat_message.created_at.getutc.iso8601 }= chat_message.created_at.to_s
           \:
           %span.content= chat_message.content
     = form_for([@chat_room, ChatMessage.new], :remote => true) do |f|
