--- a/app/views/groups/_group_brief.html.haml
+++ b/app/views/groups/_group_brief.html.haml
@@ -6,5 +6,6 @@
       %li= link_to t(".links.delete", :default => "delete"), group_path(group.id), :method => :delete, :confirm => t(".confirmations.delete", :default => "You sure?")
       %li= link_to t(".links.edit", :default => "Edit"), edit_group_path(group.id)
       %li= change_group_membership_link(current_user, group)
-      %li= link_to t(".links.chat", :default => "Chat"), chat_room_path(group.chat_room)
-      %li= link_to t(".links.session", :default => "Session"), new_group_supervision_path(group)
+      - if current_user.member_of?(group)
+        %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group.chat_room)
+        %li= link_to t(".links.session", :default => "Session"), new_group_supervision_path(group)
