--- a/app/views/groups/_group_brief.html.haml
+++ b/app/views/groups/_group_brief.html.haml
@@ -1,11 +1,13 @@
-.span-7.group_brief.round{:class => dom_id(group)}
+.group_brief
   .inner
     .title= link_to group_name(group, current_user), group
-    .description= markdown(group.description)
+    .description
+      :markdown
+        #{group.description}
     %ul.actions
-      %li= link_to t(".links.delete", :default => "delete"), group_path(group.id), :method => :delete, :confirm => t(".confirmations.delete", :default => "You sure?")
-      %li= link_to t(".links.edit", :default => "Edit"), edit_group_path(group.id)
       %li= change_group_membership_link(current_user, group)
       - if current_user.member_of?(group)
-        %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group.chat_room)
         %li= link_to t(".links.session", :default => "Session"), new_group_supervision_path(group)
+        %li= link_to t(".links.chat", :default => "Chat"), group_chat_room_path(group.chat_room)
+        %li= link_to t(".links.edit", :default => "Edit"), edit_group_path(group.id)
+        %li= link_to t(".links.delete", :default => "delete"), group_path(group.id), :method => :delete, :confirm => t(".confirmations.delete", :default => "You sure?")
