--- a/app/views/supervisions/_supervision_topic_vote.html.haml
+++ b/app/views/supervisions/_supervision_topic_vote.html.haml
@@ -1,14 +1,11 @@
-.topic_votes
+.topics_votes
   %h2= t(".topic_votes", :default => "Topic votes")
 
-  - if @supervision.voted_on_topic?(current_user)
-    = render @supervision.topics
-    %p= t(".waiting", :default => "Waiting for others")
-  - else
-    - @supervision.topics.each do |topic|
-      %div[topic]
-        = render topic.user
-        .content
-          %p= topic_content(topic)
-          = form_for([@supervision, topic, Vote.new]) do |f|
-            = f.submit t(".submit_vote", :default => "Vote")
+  %p.waiting= t(".waiting", :default => "Waiting for all votes")
+  - @supervision.topics.each do |topic|
+    %div[topic]
+      = render topic.user
+      .content
+        %p= topic_content(topic)
+        = form_for([@supervision, topic, Vote.new]) do |f|
+          = f.submit t(".submit_vote", :default => "Vote"), :disabled => @supervision.voted_on_topic?(current_user)
