--- a/app/views/supervisions/_supervision_topic_question.html.haml
+++ b/app/views/supervisions/_supervision_topic_question.html.haml
@@ -1,31 +1,15 @@
 .questions
   %h2= t(".questions", :default => "Questions")
-  - if @supervision.problem_owner?(current_user)
-    - @supervision.topic_questions.each do |question|
-      %div[question]
-        = render question.user
-        .content
-          %p= question.content
-          - if question.answer
-            = render question.answer
-          - else
-            .answer
-              .head
-                %p= t(".post_answer", :default => "Your answer")
-              = semantic_form_for([@supervision,question,Answer.new]) do |f|
-                = f.inputs do
-                  = f.input :content
-                = f.buttons :commit
-  - else
-    = render @supervision.topic_questions
+  %p.waiting= t(".waiting", :default => "Waiting for others")
+  - unless @supervision.problem_owner?(current_user)
 
-    - if @supervision.voted_on_next_step?(current_user)
-      %p= t(".waiting", :default => "Waiting for others")
-    - else
+    - unless @supervision.voted_on_next_step?(current_user)
       = semantic_form_for([@supervision, Question.new]) do |f|
-        = f.inputs t(".post_question", :default => "Your question") do
+        = f.inputs do
           = f.input :content, :hint => t(".question_content_hint", :default => "Enter your questions regarding the topic")
         = f.buttons do
           = f.commit_button
           %li= link_to(t(".no_more_questions", :default => "I have no more questions"), supervision_votes_path(@supervision), :method => :post)
+
+  = render @supervision.topic_questions
 
