--- a/app/views/ideas/_idea.html.haml
+++ b/app/views/ideas/_idea.html.haml
@@ -2,10 +2,15 @@
   = render idea.user
   .content
     %p= idea.content
-    - if idea.rating
+    - if idea.rating || @supervision.problem_owner?(current_user)
       .rating
         .head
           %p= t(".rating", :default => "Rating")
-        = form_tag "#" do
-          - 1.upto(5) do |i|
-            = radio_button_tag :idea, :rating, i, { :disabled => true, :class => "star" }
+        = form_for([@supervision, idea]) do |f|
+          - if @supervision.problem_owner?(current_user) && !idea.rating
+            - 1.upto(5) do |i|
+              = f.radio_button :rating, i, { :class => "star" }
+            = f.submit t(".submit_rate", :default => "Rate")
+          - else
+            - 1.upto(5) do |i|
+              = f.radio_button :rating, i, { :disabled => true, :class => "star" }
