--- a/app/views/supervisions/_supervision_idea.html.haml
+++ b/app/views/supervisions/_supervision_idea.html.haml
@@ -1,31 +1,17 @@
 .ideas
   %h2= t(".ideas", :default => "Ideas")
-  - if @supervision.problem_owner?(current_user)
-    - if @supervision.ideas.any?
-      - @supervision.ideas.each do |idea|
-        %div[idea]
-          = render idea.user
-          .content
-            %p= idea.content
-            .rating
-              .head
-                %p= t(".idea_rating", :default => "Idea rating")
-              = form_for([@supervision, idea]) do |f|
-                - 1.upto(5) do |i|
-                  = f.radio_button :rating, i, { :disabled => idea.rating.present?, :class => "star" }
-                = f.submit t(".submit_rate", :default => "Rate") unless idea.rating
+  - if @supervision.idea?
+    - if @supervision.problem_owner?(current_user)
+      %p.waiting= t(".waiting_for_ideas", :default => "Waiting for ideas")
     - else
-      %p= t(".waiting_for_ideas", :default => "Waiting for ideas")
+      %p.waiting= t(".waiting", :default => "Waiting for others")
 
-  - else
-    = render @supervision.ideas
-
-    - if @supervision.voted_on_next_step?(current_user)
-      %p= t(".waiting", :default => "Waiting for others")
-    - else
+    - if !@supervision.problem_owner?(current_user) && !@supervision.voted_on_next_step?(current_user)
       = semantic_form_for([@supervision, Idea.new]) do |f|
-        = f.inputs t(".post_idea", :default => "Your idea") do
+        = f.inputs do
           = f.input :content, :hint => t(".idea_content_hint", :default => "Enter your idea")
         = f.buttons do
           = f.commit_button
           %li= link_to(t(".no_more_ideas", :default => "I have no more ideas"), supervision_votes_path(@supervision), :method => :post)
+
+  = render @supervision.ideas
