--- a/app/views/supervisions/_supervision_topic_vote.html.haml
+++ b/app/views/supervisions/_supervision_topic_vote.html.haml
@@ -1,4 +1,4 @@
-.topics_votes
+.topics_votes_part
   %h2= t(".topic_votes", :default => "Topic votes")
 
   %p.waiting= t(".waiting", :default => "Waiting for all votes")
