--- a/app/views/supervisions/_supervision_idea.html.haml
+++ b/app/views/supervisions/_supervision_idea.html.haml
@@ -1,4 +1,4 @@
-.ideas
+.ideas_part
   %h2= t(".ideas", :default => "Ideas")
   - if @supervision.idea?
     - if @supervision.problem_owner?(current_user)
@@ -14,4 +14,5 @@
           = f.commit_button
           %li= link_to(t(".no_more_ideas", :default => "I have no more ideas"), supervision_votes_path(@supervision), :method => :post)
 
-  = render @supervision.ideas
+  - if @supervision.ideas
+    = render @supervision.ideas
