--- a/app/views/supervisions/_supervision_idea_feedback.html.haml
+++ b/app/views/supervisions/_supervision_idea_feedback.html.haml
@@ -1,9 +1,14 @@
-.ideas_feedback
+.ideas_feedback_part
   %h2= t(".ideas_feedback", :default => "Feedback on ideas")
-  - if @supervision.problem_owner?(current_user)
-    = semantic_form_for([@supervision, IdeasFeedback.new]) do |f|
-      = f.inputs do
-        = f.input :content, :hint => t(".ideas_feedback_content_hint", :default => "Provide feedback on ideas")
-      = f.buttons :commit
-  - else
-    %p= t(".waiting_for_feedback", :default => "Waiting for problem owner feedback")
+
+  - unless @supervision.ideas_feedback
+    - if @supervision.problem_owner?(current_user)
+      = semantic_form_for([@supervision, IdeasFeedback.new]) do |f|
+        = f.inputs do
+          = f.input :content, :hint => t(".ideas_feedback_content_hint", :default => "Provide feedback on ideas")
+        = f.buttons :commit
+    - else
+      %p.waiting= t(".waiting_for_feedback", :default => "Waiting for problem owner feedback")
+
+  - if @supervision.ideas_feedback
+    = render @supervision.ideas_feedback
