--- a/app/views/supervisions/_supervision_topic_question.html.haml
+++ b/app/views/supervisions/_supervision_topic_question.html.haml
@@ -1,7 +1,7 @@
-.topics
+.topics_part
   %h2= t(".topic", :default => "Topic")
   = render @supervision.topic
-.questions
+.questions_part
   %h2= t(".questions", :default => "Questions")
   - if @supervision.topic_question?
     %p.waiting= t(".waiting", :default => "Waiting for others")
@@ -15,5 +15,6 @@
             = f.commit_button
             %li= link_to(t(".no_more_questions", :default => "I have no more questions"), supervision_votes_path(@supervision), :method => :post)
 
-  = render @supervision.topic_questions
+  - if @supervision.topic_questions
+    = render @supervision.topic_questions
 
